--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,3 +5,12 @@
 <p>Id: <%= id %></p>
 <p>Name: <%= name %></p>
 <p>Email: <%= email %></p>
+<body>     
+<div id='app'></div>
+<form action="/search" method="post">
+    <input type="text" name="cards" value="" placeholder="If you know it search a card...">
+    <input type="submit">
+</form>
+</body>
+
+
