--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,5 +4,5 @@
     <li><a href="/auth/signup">Sign Up</a></li>
     <li><a href="/auth/login">Log In</a></li>
 </ul>
-
+<%- include('./partials/header.ejs') %>
 
