--- a/views/searchresults.ejs
+++ b/views/searchresults.ejs
@@ -5,8 +5,19 @@
 
 <h1>Sample Page</h1>
 
-<% allCards.Classic.forEach(eachCard =>{ %>
-  <p> <%= eachCard.name %> </p>
-  <p> <%= eachCard.type %> </p>
-  <p> <%= eachCard.text %> </p>
+<ul>
+<% allCards.Classic.forEach((eachCard, searchresults) => { %>
+
+  <li>
+    <%= eachCard.name %> is a <%= eachCard.type %> and a <%= eachCard.text %>
+    <form method="POST" action="/cards/deck">
+    <input hidden type="text" value="<%= eachCard.name %>" name="name">
+    <input hidden type="text" value="<%= eachCard.text %>" name="text">
+    <input hidden type="text" value="<%= eachCard.img %>" name="img">
+    <input hidden type="text" value="<%= eachCard.type %>" name="type">
+    <input hidden type="text" value="<%= eachCard.playerClass %>" name="playerClass">
+    <input type="Submit" value="Add">
+    </form>
+    </li>
 <%}) %>
+</ul>
