--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -7,10 +7,12 @@
 <p>Email: <%= email %></p>
 <body>     
 <div id='app'></div>
-<form action="/search" method="post">
-    <input type="text" name="cards" value="" placeholder="If you know it search a card...">
+<form method="GET" action="/searchresults">
+    <label for="cardFilter">Filter by Name:</label>
+    <input type="text" id="cardFilter" name="cardFilter">
     <input type="submit">
 </form>
+
 </body>
 
 
