--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,20 +10,94 @@
   <body>
     <%- include('partials/alerts') %>
     <header>
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">Home</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/auth/signup">Signup</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/auth/login">Login</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/auth/logout">Logout</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/profile">Profile</a>
+              </li>
+            </ul>
+            <% if (currentUser) {%>
+              <form method="GET" action="/searchresults">
+              <button class="btn btn-outline-success" type="submit">Search for Cards</button>
+              <% } %>
+          </form>
+          </div>
+        </div>
+      </nav>
       <nav>
         <ul>
           <% if (!currentUser) {%>
-            <li><a href="/auth/signup">Signup</a></li>
-            <li><a href="/auth/login">Login</a></li>
+            <li><a hidden href="/auth/signup">Signup</a></li>
+            <li><a hidden href="/auth/login">Login</a></li>
         <% } else { %>
-            <li><a href="/auth/logout">Logout</a></li>
-            <li><a href="/profile">Profile</a></li>
+            <li><a hidden href="/auth/logout">Logout</a></li>
+            <li><a hidden href="/profile">Profile</a></li>
         <% } %>
         </ul>
       </nav>
     </header>
-    <h1>Authentication</h1>
+    <h1>Hearth Stone Deck-Builder</h1>
     <%- body %>
+
+<script>
+  // Some random colors
+const colors = ["#3CC157", "#2AA7FF", "#1B1B1B", "#FCBC0F", "#F85F36"];
+
+const numBalls = 50;
+const balls = [];
+
+for (let i = 0; i < numBalls; i++) {
+let ball = document.createElement("div");
+ball.classList.add("ball");
+ball.style.background = colors[Math.floor(Math.random() * colors.length)];
+ball.style.left = `${Math.floor(Math.random() * 100)}vw`;
+ball.style.top = `${Math.floor(Math.random() * 100)}vh`;
+ball.style.transform = `scale(${Math.random()})`;
+ball.style.width = `${Math.random()}em`;
+ball.style.height = ball.style.width;
+
+balls.push(ball);
+document.body.append(ball);
+}
+
+// Keyframes
+balls.forEach((el, i, ra) => {
+let to = {
+  x: Math.random() * (i % 2 === 0 ? -11 : 11),
+  y: Math.random() * 12
+};
+
+let anim = el.animate(
+  [
+    { transform: "translate(0, 0)" },
+    { transform: `translate(${to.x}rem, ${to.y}rem)` }
+  ],
+  {
+    duration: (Math.random() + 1) * 2000, // random duration
+    direction: "alternate",
+    fill: "both",
+    iterations: Infinity,
+    easing: "ease-in-out"
+  }
+);
+});
+
+</script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
