--- a/views/deck.ejs
+++ b/views/deck.ejs
@@ -8,29 +8,13 @@
 		<form method="POST" action="/cards/deck?_method=PUT">
 		<input type="text" name="description">	
 		<input hidden type="text" name="cardId">
-		<input hidden type="text" value="<%= eachCard.name %>" name="name">
-		<input hidden type="text" value="<%= eachCard.text %>" name="text">
-		<input hidden type="text" value="<%= eachCard.img %>" name="img">
-		<input hidden type="text" value="<%= eachCard.type %>" name="type">
-		<input hidden type="text" value="<%= eachCard.playerClass %>" name="playerClass">
 		<input type="Submit" value="Comment">
 		</form>
+		<form method="POST" action="/cards/deck/?_method=DELETE">
+			<input hidden name="cardId" value="<%= eachCard.id %>">	
+			<button type="Submit">Delete</button>
+			</form>
 		</li>
 	<%})) %>
 	</ul>
 <ul>
-	<% allCards.forEach((eachCard => { %>
-	  <li>
-		<%= eachCard.name %> is a <%= eachCard.type %> and a <%= eachCard.text %>
-		<form method="POST" action="/cards/deck/?_method=DELETE">
-		<input hidden name="cardId" value="">	
-		<input hidden type="text" value="<%= eachCard.name %>" name="name">
-		<input hidden type="text" value="<%= eachCard.text %>" name="text">
-		<input hidden type="text" value="<%= eachCard.img %>" name="img">
-		<input hidden type="text" value="<%= eachCard.type %>" name="type">
-		<input hidden type="text" value="<%= eachCard.playerClass %>" name="playerClass">
-		<input type="Submit" value="Delete">>
-		</form>
-		</li>
-	<%})) %>
-	</ul>
